@@ -26,6 +26,7 @@
 #include "pqxx/transaction"
 
 #include "pqxx/internal/gates/connection-sql_cursor.hxx"
+#include "pqxx/internal/gates/icursor_iterator-icursorstream.hxx"
 #include "pqxx/internal/gates/icursorstream-icursor_iterator.hxx"
 #include "pqxx/internal/gates/result-sql_cursor.hxx"
 
@@ -407,26 +408,30 @@ icursorstream::size_type pqxx::icursorstream::forward(size_type n)
 
 void pqxx::icursorstream::insert_iterator(icursor_iterator *i) throw ()
 {
-  i->m_next = m_iterators;
-  if (m_iterators) m_iterators->m_prev = i;
+  gate::icursor_iterator_icursorstream(*i).set_next(m_iterators);
+  if (m_iterators)
+    gate::icursor_iterator_icursorstream(*m_iterators).set_prev(i);
   m_iterators = i;
 }
 
 
 void pqxx::icursorstream::remove_iterator(icursor_iterator *i) const throw ()
 {
+  gate::icursor_iterator_icursorstream igate(*i);
   if (i == m_iterators)
   {
-    m_iterators = i->m_next;
-    if (m_iterators) m_iterators->m_prev = 0;
+    m_iterators = igate.get_next();
+    if (m_iterators)
+      gate::icursor_iterator_icursorstream(*m_iterators).set_prev(0);
   }
   else
   {
-    i->m_prev->m_next = i->m_next;
-    if (i->m_next) i->m_next->m_prev = i->m_prev;
+    icursor_iterator *prev = igate.get_prev(), *next = igate.get_next();
+    gate::icursor_iterator_icursorstream(*prev).set_next(next);
+    if (next) gate::icursor_iterator_icursorstream(*next).set_prev(prev);
   }
-  i->m_prev = 0;
-  i->m_next = 0;
+  igate.set_prev(0);
+  igate.set_next(0);
 }
 
 
@@ -436,9 +441,14 @@ void pqxx::icursorstream::service_iterators(difference_type topos)
 
   typedef multimap<difference_type,icursor_iterator*> todolist;
   todolist todo;
-  for (icursor_iterator *i = m_iterators; i; i = i->m_next)
-    if (i->m_pos >= m_realpos && i->m_pos <= topos)
-      todo.insert(todolist::value_type(i->m_pos, i));
+  for (icursor_iterator *i = m_iterators, *next; i; i = next)
+  {
+    gate::icursor_iterator_icursorstream gate(*i);
+    const icursor_iterator::difference_type ipos = gate.pos();
+    if (ipos >= m_realpos && ipos <= topos)
+      todo.insert(todolist::value_type(ipos, i));
+    next = gate.get_next();
+  }
   const todolist::const_iterator todo_end(todo.end());
   for (todolist::const_iterator i = todo.begin(); i != todo_end; )
   {
@@ -446,7 +456,7 @@ void pqxx::icursorstream::service_iterators(difference_type topos)
     if (readpos > m_realpos) ignore(readpos - m_realpos);
     const result r = fetchblock();
     for ( ; i != todo_end && i->first == readpos; ++i)
-      i->second->fill(r);
+      gate::icursor_iterator_icursorstream(*i->second).fill(r);
   }
 }
 
